--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     - The freeCodeCamp Team
 
     -->
-    <h1>Hello World, we are software developers!</h1>
+    <div id="main">
+        <h1 id="title">Survey Form</h1>
+        <p id="description">This is a sample survery form</p>
+        
+    </div>
     
     <script  src="js/index.js"></script>
   </body>
