--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         <h1 id="title">Survey Form</h1>
         <p id="description">This is a sample survery form</p>
         
+        <form id="survey-form" method="POST"> 
+          <div>
+            <label for="name">* Name</label>
+            <input type="text" id="name" required />
+          </div>
+        </form>
+
     </div>
     
     <script  src="js/index.js"></script>
