--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
     <div id="main">
         <h1 id="title">Survey Form</h1>
         <p id="description">This is a sample survery form</p>
-        
+
         <form id="survey-form" method="POST"> 
           <div>
             <label for="name">* Name</label>
             <input type="text" id="name" required />
+          </div>
+          <div>
+              <label for="email">* Email</label>
+              <input type="email" id="email" required />
           </div>
         </form>
 
