--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
         <p id="description">This is a sample survery form</p>
 
         <form id="survey-form" method="POST"> 
-          <div>
+          <div class="control">
             <label for="name">* Name</label>
             <input type="text" id="name" required />
           </div>
-          <div>
+          <div class="control">
               <label for="email">* Email</label>
               <input type="email" id="email" required />
+          </div>
+          <div class="control">
+              <label for="number">* Number</label>
+              <input type="number" id="number" required />
           </div>
         </form>
 
