--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 
         <form id="survey-form" method="POST"> 
           <div class="control">
-            <label for="name">* Name</label>
+            <label for="name" id="name-label">* Name</label>
             <input type="text" id="name" required />
           </div>
           <div class="control">
-              <label for="email">* Email</label>
+              <label for="email" id="email-label">* Email</label>
               <input type="email" id="email" required />
           </div>
           <div class="control">
-              <label for="number">* Number</label>
-              <input type="number" id="number" required />
+              <label for="number" id="number-label">* Number</label>
+              <input type="number" id="number" required min="10" and max="100000" />
           </div>
         </form>
 
