--- a/index.html
+++ b/index.html
@@ -50,26 +50,32 @@
           </div>
 
           <div>
-              <div>
+              <div class="control">
                   <label>Group 1</label>
                   <input type="radio" name="group1" value="Radio 1"> Radio 1
                   <input type="radio" name="group1" value="Radio 2" /> Radio 2
                   <input type="radio" name="group1" value="Radio 3" /> Radio 3
               </div>
-              <div>
+              <div class="control">
                 <label>Group 2</label>
                 <input type="radio" name="group2" value="Radio 4" />Radio 4
                 <input type="radio" name="group2" value="Radio 5" />Radio 5
                 <input type="radio" name="group2" value="Radio 6" />Radio 6
             </div>
-            <div>
+            <div class="control">
                 <label>Checkbox</label>
                 <input type="checkbox" name="check1" value="check 1" />Check 1
                 <input type="checkbox" name="check2" value="check 2" />Check 2
                 <input type="checkbox" name="check3" value="check 3" />Check 3
             </div>
           </div>
-
+          <div class="control">
+            <label for="comments">Comments</label>
+            <textarea id="comments" style="" ></textarea>
+          </div>
+          <div class="control">
+            <input type="submit" id="submit" value="Submit">
+          </div>
         </form>
 
     </div>
